  case). (John Arbash Meinel, #343218)

* ``bzr serve`` no longer slowly leaks memory. The compiled
  ``bzrlib.bencode.Encoder()`` class was using ``__del__`` to cleanup and
  free resources, and it should have been using ``__dealloc__``.
  This will likely have an impact on any other process that is serving for
  an extended period of time.  (John Arbash Meinel, #494406)

Improvements
************

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******


bzr 2.0.3
#########

:Codename: little italy
:2.0.3: 2009-12-14


The third stable release of Bazaar has a small handful of bugfixes. As
expected, this has no internal or external compatibility changes versus
2.0.2 (or 2.0.0).

Bug Fixes
*********

* ``bzr push --use-existing-dir`` no longer crashes if the directory
  exists but contains an invalid ``.bzr`` directory.
  (Andrew Bennetts, #423563)

* Content filters are now applied correctly after pull, merge and switch.
  (Ian Clatworthy, #385879)

* Fix a potential segfault in the groupcompress hash map handling code.
  When inserting new entries, if the final hash bucket was empty, we could
  end up trying to access if ``(last_entry+1)->ptr == NULL``.
  (John Arbash Meinel, #490228)

* Improve "Binary files differ" hunk handling.  (Aaron Bentley, #436325)


bzr 2.0.2
#########

:Codename: after the scare
:2.0.2: 2009-11-02

The second in our "let's keep the stable bugfixes flowing" series. As
expected this has a few (~9) bugfixes relative to 2.0.1, and no major api
changes or features.

Bug Fixes
*********

* Avoid "NoneType has no attribute st_mode" error when files disappear
  from a directory while it's being read.  (Martin Pool, #446033)

* Content filters are now applied correctly after revert.
  (Ian Clatworthy)

* Diff parsing handles "Binary files differ" hunks.  (Aaron Bentley, #436325)

* Fetching from stacked pre-2a repository via a smart server no longer
  fails intermittently with "second push failed to complete".